syntax = "proto3";

package api.post;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/GoSimplicity/LinkMe-microservices/api/post/v1;post";

service Post {
	rpc CreatePost (CreatePostRequest) returns (CreatePostReply) {
		option (google.api.http) = {
			post: "/create"
			body: "*"
		};
	}
	rpc UpdatePost (UpdatePostRequest) returns (UpdatePostReply) {
		option (google.api.http) = {
			post: "/update"
			body: "*"
		};
	}
	rpc UpdatePostStatus (UpdatePostStatusRequest) returns (UpdatePostStatusReply);
	rpc DeletePost (DeletePostRequest) returns (DeletePostReply) {
		option (google.api.http) = {
			delete: "/delete/{postId}"
		};
	}
	rpc PublishPost (PublishPostRequest) returns (PublishPostReply) {
		option (google.api.http) = {
			post: "/publish"
			body: "*"
		};
	}
	rpc ListPost (ListPostRequest) returns (ListPostReply) {
		option (google.api.http) = {
			post: "/list"
			body: "*"
		};
	}
	rpc ListPubPost (ListPubPostRequest) returns (ListPubPostReply) {
		option (google.api.http) = {
			post: "/list_pub"
			body: "*"
		};
	}
	rpc DetailPost (DetailPostRequest) returns (DetailPostReply) {
		option (google.api.http) = {
			get: "/detail/{postId}"
		};
	}
	rpc DetailPubPost (DetailPubPostRequest) returns (DetailPubPostReply) {
		option (google.api.http) = {
			get: "/detail_pub/{postId}"
		};
	}
}

message CreatePostRequest {
	int64 postId = 1;
	string title = 2;
	string content = 3;
	int64 plateId = 4;
}

message CreatePostReply {
	int32 code = 1;
	string msg = 2;
	int64 data = 3;
}

message UpdatePostRequest {
	int64 postId = 1;
	string title = 2;
	string content = 3;
	int64 plateId = 4;
}

message UpdatePostReply {
	int32 code = 1;
	string msg = 2;
}

message UpdatePostStatusRequest {
	int64 postId = 1;
	uint32 status = 2;
}

message UpdatePostStatusReply {
	int32 code = 1;
	string msg = 2;
}

message DeletePostRequest {
	int64 postId = 1;
}

message DeletePostReply {
	int32 code = 1;
	string msg = 2;
}

message ListPostRequest {
	int32 page = 1;
	int64 size = 2;
}

message ListPostReply {
	int32 code = 1;
	string msg = 2;
	repeated ListPost data = 3;
}

message PublishPostRequest {
	int64 postId = 1;
}

message PublishPostReply {
	int32 code = 1;
	string msg = 2;
	int64 checkId = 3;
}

message ListPubPostRequest {
	int32 page = 1;
	int64 size = 2;
}

message ListPubPostReply {
	int32 code = 1;
	string msg = 2;
	repeated ListPost data = 3;
}

message DetailPostRequest {
	int64 postId = 1;
}

message DetailPostReply {
	int32 code = 1;
	string msg = 2;
	DetailPost data = 3;
}

message DetailPubPostRequest {
	int64 postId = 1;
}

message DetailPubPostReply {
	int32 code = 1;
	string msg = 2;
	DetailPost data = 3;
}

message LikePostRequest {
	int64 postId = 1;
	bool liked = 2;
}

message LikePostReply {
	int32 code = 1;
	string msg = 2;
}

message ListPost {
	int64 id = 1;
	string title = 2;
	string content = 3;
	google.protobuf.Timestamp createdAt = 4;
	google.protobuf.Timestamp updatedAt = 5;
	int64 userId = 6;
	int64 plateId = 7;
}

message DetailPost {
	int64 id = 1;
	string title = 2;
	string content = 3;
	google.protobuf.Timestamp createdAt = 4;
	google.protobuf.Timestamp updatedAt = 5;
	int64 userId = 6;
	int64 plateId = 7;
}
